# libultraship

./: CMakeLists.txt
.github/workflows/: tidy-format-validation.yml  tidy-result-publish.yml
extern_macos/: CMakeLists.txt
include/libultraship/: bridge.h  cvar.h  hooks.h  libultraship.h  logger.h
include/libultraship/libultra/: gbi.h
src/: CMakeLists.txt
src/binarytools/: BinaryReader.h  BinaryWriter.h
src/core/: Window.cpp  Window.h
src/core/bridge/: resourcebridge.h  windowbridge.cpp
src/debug/: CrashHandler.cpp
src/graphic/Fast3D/: gfx_direct3d11.cpp  gfx_dxgi.cpp  gfx_gx2.cpp  gfx_metal.cpp  gfx_opengl.cpp  gfx_pc.cpp  gfx_sdl2.cpp  gfx_vulkan.cpp  gfx_vulkan.h
src/menu/: Console.h  ImGuiImpl.cpp  ImGuiImpl.h
src/misc/: Hooks.h  JsonConfig.cpp
src/resource/: Resource.h
src/resource/factory/: DisplayListFactory.cpp  TextureFactory.cpp
src/resource/factory/SoH/: TextureFactory.cpp
src/resource/types/: Texture.cpp  Texture.h
